# bacons-law

./: CMakeLists.txt  README.md  kevinbacon.pro  main.cpp  menu.cpp  menu.h  readme.md
include/: actorcrew.h  avl.h  graph.h  map.h  menu.h  multimap.h  mylib.h  myqueue.h  node.h  parser.h
src/: graph.cpp  menu.cpp  mylib.cpp  parser.cpp
